--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -1,23 +1,26 @@
-<h1>{{ heroe?.nombre | uppercase }}<small>( {{ heroe?.aparicion | date:'y' }} )</small></h1>
-<hr>
-<div class="row">
-    <div class="col-md-4">
-        <img [src]="heroe?.img" [alt]="heroe?.nombre" class="img-fluid">
-        <br><br>
-        <a [routerLink]="['/heroes']" class="btn btn-outline-danger btn-block">Regresar</a>
-
-    </div>
-
-    <div class="col-md-8">
-        <h3>{{heroe?.nombre}}</h3>
-        <br>
-        <p>{{heroe?.bio}}</p>
-        <div>
+<div ng-init="getHeroe()">
+    <h1>{{ heroe?.nombre | uppercase }}<small>( {{ heroe?.aparicion | date:'y' }} )</small></h1>
+    <hr>
+    <div class="row">
+        <div class="col-md-4">
+            <img [src]="heroe?.img" [alt]="heroe?.nombre" class="img-fluid">
+            <br><br>
+            <a [routerLink]="['/heroes']" class="btn btn-outline-danger btn-block">Regresar</a>
 
         </div>
-        <img *ngIf="heroe?.casa=='Marvel'" src="assets/img/Marvel.png" alt="Marvel" class="img-logo">
-        <img *ngIf="heroe?.casa=='DC'" src="assets/img/DC.png" alt="DC" class="img-logo">
+
+        <div class="col-md-8">
+            <h3>{{heroe?.nombre}}</h3>
+            <br>
+            <p>{{heroe?.bio}}</p>
+            <div>
+
+            </div>
+            <img *ngIf="heroe?.casa=='Marvel'" src="assets/img/Marvel.png" alt="Marvel" class="img-logo">
+            <img *ngIf="heroe?.casa=='DC'" src="assets/img/DC.png" alt="DC" class="img-logo">
+
+        </div>
+        <p>{{helloWord()}}</p>
 
     </div>
-    <p>{{helloWord()}}</p>
 </div>
